# Mini-Clawd-Bot

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  requirements.txt
memory/: MEMORY.md  SOUL.md  TOOLS.md  USER.md
src/: __init__.py  main.py
src/agent/: __init__.py  context.py  core.py  tools_executor.py
src/memory/: __init__.py  long_term.py  profile.py  recall.py  short_term.py  working.py
src/rag/: __init__.py  embeddings.py  indexer.py  vectorstore.py
src/slack/: __init__.py  app.py  handlers.py
src/tools/: __init__.py  github_tools.py  notion_tools.py  scheduler.py  slack_tools.py
src/utils/: __init__.py  config.py  logger.py
